--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://rb.gy/e8psex">
+  <meta http-equiv="refresh" content="0;url=https://t.me/+aJPz3_COVFtkMjc1">
 </head>
 <body></body>
 </html>
